--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/cheesekat/capstone_petsforlife#readme",
   "dependencies": {
+    "@petfinder/petfinder-js": "^1.0.6",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
